--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,7 +10,7 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
@@ -18,7 +18,7 @@ jobs:
 
     runs-on: ubuntu-18.04
     env:
-      IMAGE_FULL: quay.io/che-incubator/che-dashboard-next:nodejs-license-tool
+      IMAGE_FULL: quay.io/che-incubator/dash-licenses:next
 
     steps:
       -
@@ -34,10 +34,10 @@ jobs:
         run: docker image prune -a -f
       -
         name: "Docker Quay.io Login"
-        run: docker login -u "${{ secrets.QUAY_ECLIPSE_USERNAME }}" -p "${{ secrets.QUAY_ECLIPSE_PASSWORD }}" quay.io
+        run: docker login -u "${{ secrets.QUAY_CHE_INCUBATOR_USERNAME }}" -p "${{ secrets.QUAY_CHE_INCUBATOR_PASSWORD }}" quay.io
       -
         name: "Build and push the Docker image(s)"
-        run: docker buildx build --platform linux/amd64,linux/s390x  -t ${IMAGE_FULL}  -f Dockerfile --push .
+        run: docker buildx build --platform linux/amd64  -t ${IMAGE_FULL}  -f Dockerfile --push .
       -
         name: "Docker Logout"
         run: docker logout
