--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,19 +25,20 @@ jobs:
         name: "Checkout license-tool source code"
         uses: actions/checkout@v2
       -
-        name: "Docker Buildx"
-        uses: crazy-max/ghaction-docker-buildx@v3
+        name: "Set up Docker Buildx"
+        uses: docker/setup-buildx-action@v1
+      -
+        name: "Docker quay.io Login"
+        uses: docker/login-action@v1
         with:
-          buildx-version: latest
+          registry: quay.io
+          username: ${{ secrets.QUAY_CHE_INCUBATOR_USERNAME }}
+          password: ${{ secrets.QUAY_CHE_INCUBATOR_PASSWORD }}
       -
-        name: "Docker prepare"
-        run: docker image prune -a -f
-      -
-        name: "Docker Quay.io Login"
-        run: docker login -u "${{ secrets.QUAY_CHE_INCUBATOR_USERNAME }}" -p "${{ secrets.QUAY_CHE_INCUBATOR_PASSWORD }}" quay.io
-      -
-        name: "Build and push the Docker image(s)"
-        run: docker buildx build --platform linux/amd64  -t ${IMAGE_FULL}  -f Dockerfile --push .
-      -
-        name: "Docker Logout"
-        run: docker logout
+        name: "Build and push"
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ env.IMAGE_FULL }}
